--- a/index.html
+++ b/index.html
@@ -7,27 +7,42 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <nav class="navbar">
-        <div class="container">
-            <div class="wrapper">
-            <a href="#" class="brand">JK</a>
-            <div>
-                <ul class="navLinks">
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Projects</a></li>
-                    <li><a href="#">Contact Me</a></li>
-                </ul>
+    <header class="header">
+        <a href="#" class="brand">JK.</a>
+
+        <nav class="navbar">
+            <ul>
+                <li><a href="#" class="home-btn">Home</a></li>
+                <li><a href="#" class="about-btn">About</a></li>
+                <li><a href="#" class="projects-btn">Projects</a></li>
+                <li><a href="#" class="contact-btn">Contact Me</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <section class="home" id="home-content">
+        <div class="content">
+            <h1>Hi, I'm JK</h1>
+            <h3>Frontend Developer</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis aut rerum voluptatem, maxime, libero ratione, amet ad vero iusto sunt id sit ipsam praesentium voluptatum omnis ullam?</p>
+            <div class="btn-box">
+                <a href="#">Hire Me</a>
+                <a href="#">Let's Talk</a>
             </div>
         </div>
-        </div>
-    </nav>
 
-    <section id="home">
-        <div class="container">
-            <h1>Home</h1>
-        </div>
+    </section>
 
+    <section class="about" id="about-content">
+        <h1>About</h1>
+    </section>
+
+    <section class="projects" id="projects-content">
+        <h1>Projects</h1>
+    </section>
+
+    <section class="contact" id="contact-content">
+        <h1>Contact Me</h1>
     </section>
     
     <script src="app.js"></script>
