--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 
         <nav class="navbar">
             <ul>
-                <li><a href="#" class="home-btn">Home</a></li>
-                <li><a href="#" class="about-btn">About</a></li>
+                <li><a href="#home-content" class="home-btn">Home</a></li>
+                <li><a href="#about-content" class="about-btn">About</a></li>
                 <li><a href="#" class="projects-btn">Projects</a></li>
                 <li><a href="#" class="contact-btn">Contact Me</a></li>
             </ul>
@@ -34,7 +34,28 @@
     </section>
 
     <section class="about" id="about-content">
-        <h1>About</h1>
+        <div class="about-content">
+            <h1>About</h1>
+            <p class="about-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem magnam quae eligendi animi ratione nostrum consequuntur earum ullam totam, non perferendis repudiandae sed hic sit maxime ducimus. Quos delectus quasi ea ipsum deserunt beatae culpa vero dolore placeat. Consequuntur, suscipit!</p>
+            <h3>Education</h3>
+            <div class="card-container">
+                <div class="educ-card">
+                    <div class="title">Elementary</div>
+                    <div class="educ-info">Mandaue City Central School</div>
+                    <div class="educ-year">2008-2009</div>
+                </div>
+                <div class="educ-card">
+                    <div class="title">Secondary</div>
+                    <div class="educ-info">Mandaue City Comprehensive National High School</div>
+                    <div class="educ-year">2012-2013</div>
+                </div>
+                <div class="educ-card">
+                    <div class="title">College</div>
+                    <div class="educ-info">Mandaue City College</div>
+                    <div class="educ-year">2017-2021</div>
+                </div>
+            </div>
+        </div>
     </section>
 
     <section class="projects" id="projects-content">
