Added hero image

--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
                 <a href="#">Let's Talk</a>
             </div>
         </div>
+        
+        <div class="img">
+            <img src="images/kisspng-web-development-web-developer-web-design-software-5ae187d4f2c515.1032139415247298129944.png">
+        </div>
 
     </section>
 
