--- a/index.html
+++ b/index.html
@@ -59,6 +59,72 @@
                     <div class="educ-year">2017-2021</div>
                 </div>
             </div>
+            <h3>Skills</h3>
+            <div class="skills-container">
+                <div class="skills">
+                    <div class="progress-bar">
+                        <span class="progress-per html"></span>
+                    </div>
+                    <div class="skill-box">
+                        <div class="skill-title">HTML</div>
+                        <div class="percent">80%</div>
+                    </div>
+                </div>
+                <div class="skills">
+                    <div class="progress-bar">
+                        <span class="progress-per css"></span>
+                    </div>
+                    <div class="skill-box">
+                        <div class="skill-title">CSS</div>
+                        <div class="percent">70%</div>
+                    </div>
+                </div>
+                <div class="skills">
+                    <div class="progress-bar">
+                        <span class="progress-per js"></span>
+                    </div>
+                    <div class="skill-box">
+                        <div class="skill-title">JavaScript</div>
+                        <div class="percent">50%</div>
+                    </div>
+                </div>
+                <div class="skills">
+                    <div class="progress-bar">
+                        <span class="progress-per react"></span>
+                    </div>
+                    <div class="skill-box">
+                        <div class="skill-title">React</div>
+                        <div class="percent">30%</div>
+                    </div>
+                </div>
+                <div class="skills">
+                    <div class="progress-bar">
+                        <span class="progress-per bootsrap"></span>
+                    </div>
+                    <div class="skill-box">
+                        <div class="skill-title">Bootstrap</div>
+                        <div class="percent">50%</div>
+                    </div>
+                </div>
+                <div class="skills">
+                    <div class="progress-bar">
+                        <span class="progress-per tailwind"></span>
+                    </div>
+                    <div class="skill-box">
+                        <div class="skill-title">Tailwind</div>
+                        <div class="percent">50%</div>
+                    </div>
+                </div>
+                <div class="skills">
+                    <div class="progress-bar">
+                        <span class="progress-per git"></span>
+                    </div>
+                    <div class="skill-box">
+                        <div class="skill-title">Git/Github</div>
+                        <div class="percent">60%</div>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 
